# Boost.DynamicAny

./: CMakeLists.txt  README.md  index.html
doc/: dynamic_any.xml
examples/: test.cpp
include/boost/: any_ref.hpp  dynamic_any.hpp
tests/: dynamic_any_test.cpp
